Fixed header on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -328,6 +328,12 @@ body {
     .header__search {
       margin-left: auto;
       margin-right: 24px; } }
+  @media (max-width: 375px) {
+    .header__logo {
+      margin-right: 24px;
+      width: 135px; }
+    .header__search {
+      margin-right: 16px; } }
 
 .footer {
   overflow: hidden;
